# PROYECTO-PROCESAMIENTO-DE-IM-GENES-C-ARQUITECTURA-DE-COMPUTADORES

./: .clang-format  .clang-tidy  CMakeLists.txt  arquitectura-main (1).zip:Zone.Identifier  es-proj.pdf:Zone.Identifier
arquitectura-main/: .clang-tidy  CMakeLists.txt
arquitectura-main/common/: CMakeLists.txt  _aux.cpp  _aux.hpp  binaryio.cpp  binaryio.hpp  parsebinary.cpp  parsebinary.hpp  progargs.cpp  progargs.hpp  validatefile.cpp  validatefile.hpp
arquitectura-main/ftest-aos/: CMakeLists.txt  args_test.sh  info_test.sh  maxlevel_test.sh  resize_test.sh  run_all_tests.sh  test_utils.sh
arquitectura-main/ftest-aos/expected/: deer-small-maxlevel10.ppm  deer-small-resize100x200.ppm
arquitectura-main/ftest-aos/input/: deer-small-invalid.ppm  lake-large.ppm
arquitectura-main/ftest-soa/: CMakeLists.txt  test1.sh
arquitectura-main/imgaos/: CMakeLists.txt  compress.cpp  cut_freq.cpp  imageaos.cpp  imageaos.hpp  max_level.cpp  pixel.hpp  resize.cpp
arquitectura-main/imgsoa/: CMakeLists.txt
arquitectura-main/imtool-aos/: CMakeLists.txt  main.cpp
arquitectura-main/utest-common/: CMakeLists.txt  binaryio_test.cpp  parsebinary_test.cpp  progargs_test.cpp  validatefile_test.cpp
arquitectura-main/utest-imgaos/: CMakeLists.txt  imageaos_compress_test.cpp  imageaos_cut_freq_test.cpp  imageaos_max_level_test.cpp  imageaos_resize_test.cpp  imageaos_test.cpp
arquitectura-main/utest-imgsoa/: CMakeLists.txt
common/: CMakeLists.txt  binaryio.cpp  binaryio.hpp  header_ppm.cpp  header_ppm.hpp  progargs.cpp  progargs.hpp
ftest-aos/: CMakeLists.txt  Makefile  compress.sh  cut_freq.sh  max_level.sh  resize.sh  test_maxlevel.sh
ftest-soa/: test_compress.sh  test_cutfreq.sh  test_info.sh  test_maxlevel.sh  test_resize.sh
imgaos/: CMakeLists.txt  image-operations-aos.cpp  image-operations-aos.hpp  imageaos.hpp  pixel-aos.hpp  ppm-aos.cpp  ppm-aos.hpp
imgsoa/: CMakeLists.txt  image-operations-soa.cpp  image-operations-soa.hpp  imagesoa.hpp  ppm-soa.cpp  ppm-soa.hpp
imtool-aos/: CMakeLists.txt  main.cpp  main.hpp
imtool-soa/: main.cpp  main.hpp
include/common/: binaryio.hpp  header_ppm.hpp  progars.hpp
include/imgaos/: CMakeLists.txt  image-operations.cpp  image-operations.hpp  ppm.hpp
include/imgsoa/: CMakeLists.txt  image-operations.cpp  image-operations.hpp  ppm.hpp
input/: deer-small.ppm  lake-small.ppm  sabatini.ppm
src/common/: CMakeLists.txt  binaryio.cpp  header_ppm.cpp  progargs.cpp
src/imgaos/: CMakeLists.txt  imageaos.hpp  ppm.cpp
src/imgsoa/: CMakeLists.txt  imagesoa.hpp  ppm.cpp
tests/: test_image_info.cpp
tests/ftest-soa/: CMakeLists.txt
tests/utest-imgaos/: CMakeLists.txt
tests/utest-imgsoa/: CMakeLists.txt
utest-common/: CMakeLists.txt  binaryio_test.cpp  progargs_test.cpp
utest-imgaos/: CMakeLists.txt  compress_test.cpp  cutfreq_test.cpp  info_test.cpp  maxlevel_test.cpp  resize_test.cpp
utest-imgsoa/: CMakeLists.txt  compress_test.cpp  cutfreq_test.cpp  info_test.cpp  maxlevel_test.cpp  resize_test.cpp
